<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="pl.michalregulski.bmicalculator.viewmodel.BMIViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bmiContentCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.BMIActivity"
        tools:showIn="@layout/activity_bmi">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintEnd_toStartOf="@+id/weightUnitTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/weightHint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3"
                android:text="@={viewModel.weight}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/weightUnitTV"
            android:layout_width="@dimen/unitWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@{viewModel.bmiCalculatorType.weightDescriptionId}"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/weightTIL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weightTIL"
            tools:text="@string/metricWeightUnit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintEnd_toStartOf="@+id/heightUnitTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/heightHint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3"
                android:text="@={viewModel.height}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/heightUnitTV"
            android:layout_width="@dimen/unitWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@{viewModel.bmiCalculatorType.heightDescriptionId}"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/heightTIL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/heightTIL"
            tools:text="@string/metricHeightUnit" />

        <TextView
            android:id="@+id/bmiMessageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/bmiMessage"
            android:textAlignment="center"
            android:visibility="@{viewModel.isResultVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/bmiValueTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bmiValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:focusable="false"
            android:text="@{viewModel.bmiString}"
            android:textAlignment="center"
            android:textSize="@dimen/bmiTextSize"
            android:visibility="@{viewModel.isResultVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/bmiInfoTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="31.21" />

        <TextView
            android:id="@+id/bmiInfoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:text="@{viewModel.description}"
            android:textAlignment="center"
            android:visibility="@{viewModel.isResultVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/obesity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
